feat: add lojavirus/sorting options improved
