# backend/controllers/sneakerController.js
@@ -3,38 +3,37 @@ const { removeAccents, removeDots } = require('../src/utils/stringManipulation')
 const { clearSneakerName } = require('../src/utils/titleFunctions');
 
 const coresRegex = {
-    "azul": /azul|blue|astral glow|turquesa|turquoise|aqua|storm|alaska|hongo bros|shanahan importado|scuba|teal|jade|heather|mistyc|misty|surf|prloin|navy|naval|marinho|aquatic|royal|indigo|vtgi|nindig|tecind|stormy|tiffany|cobalt|denim|sky|capri|lago drive|agosto|salute|selubl|blues|midnight|acqua|bwt|xswb|abb|dn1|xskb|wlk/i,
-    "cinza": /cinza|grey|gray|frost|astral glow|hongo bros|shanahan importado|mork|sea salt|ice|quarry|magnet|cz|tbwf|egret|nuvem|glacier|gelo|nimbus|arctic|grigio|iron|rock|talc|satelite|grethr|chumbo|grefiv|grafite|graphite|dark pewter|eclipse|cobblestone|bwt|xswb|blg|xskb|nwd|xskr/i,
-    "branco": /branco|white|wht|allwhite|truewhite|rawwhite|clowhi|crywht|ftwwht|cwhite|reflection|frost|castanho|pb|sidestripeblack|astral glow|shanahan importado|bc\.neve|alloy|bco neve|sea salt|orquidea|birch|ice|capri|bwt|wlm|xkwr|hdv|xswb|wbk|wtk|hbw|blw|bbw|bwb|nwd|wlk/i,
-    "preto": /preto|black|reflection|frost|castanho|pb|sidestripeblack|alaska|verona slip prm|ltx|latex|blk|cblack|ght|pto carvao|blackout|scuba|nomade essencial|skate hockey|original 3|notorio|bwt|byo|kkg|xkwr|bcm|wbk|gb2|abb|wtk|blg|blw|bbw|bwb|xskb|xkcc|xskr/i,
-    "marrom": /marrom|mar|brown|workwear|mesa|canhamo|caramelo|caramel|mel queimado|lbrown|camel|maroon|butternut|cafe|deserto|whisky|colmeia|chipmunk|root beer|demitasse|cork|ginger|pecan|earth|brostr|xccn|dn1|xkcc/i,
-    "verde": /verde|green|storm|mint|prlogr|june bag|avocado|floresta|fatigue|dark moss|oliva|olive|teal|neon|lime|limão|limao|buzz|halfgreen|esmerald|olv|wlm|hdv/i,
+    "azul": /azul|blue|astral glow|turquesa|turquoise|aqua|storm|alaska|hongo bros|shanahan importado|scuba|teal|jade|heather|mistyc|misty|surf|prloin|navy|naval|marinho|aquatic|royal|indigo|vtgi|nindig|tecind|stormy|tiffany|cobalt|denim|sky|capri|lago drive|agosto|salute|selubl|blues|midnight|acqua|bwt|xswb|abb|dn1|xskb|wlk|obsidian|hyper/i,
+    "cinza": /cinza|grey|gray|frost|astral glow|hongo bros|shanahan importado|mork|sea|salt|ice|quarry|magnet|cz|tbwf|egret|nuvem|glacier|gelo|nimbus|arctic|grigio|iron|rock|talc|satelite|grethr|chumbo|grefiv|grafite|graphite|dark pewter|eclipse|cobblestone|bwt|xswb|blg|xskb|nwd|xskr|dust/i,
+    "branco": /branco|white|wht|allwhite|truewhite|rawwhite|clowhi|crywht|ftwwht|cwhite|reflection|frost|castanho|pb|sidestripeblack|astral glow|shanahan importado|bc\.neve|alloy|bco neve|sea|salt|orquidea|birch|ice|capri|bwt|wlm|xkwr|hdv|xswb|wbk|wtk|hbw|blw|bbw|bwb|nwd|wlk/i,
+    "preto": /preto|black|reflection|frost|castanho|pb|sidestripeblack|alaska|verona slip prm|ltx|latex|blk|cblack|ght|pto carvao|blackout|scuba|nomade essencial|skate hockey|original 3|notorio|bwt|byo|kkg|xkwr|bcm|wbk|gb2|abb|wtk|blg|blw|bbw|bwb|xskb|xkcc|xskr|summit|photon/i,
+    "marrom": /marrom|mar|brown|workwear|mesa|canhamo|caramelo|caramel|mel queimado|lbrown|camel|maroon|butternut|cafe|deserto|whisky|colmeia|chipmunk|root beer|demitasse|cork|ginger|pecan|earth|brostr|xccn|dn1|xkcc|summit/i,
+    "verde": /verde|green|storm|mint|prlogr|june bag|avocado|floresta|fatigue|dark moss|oliva|olive|teal|neon|lime|limão|limao|buzz|halfgreen|esmerald|olv|wlm|hdv|emerald/i,
     "off-white": /off-white|off white|offwhite|crewht|owhite|bc bauni|bc baun|buttercream|chantilly|marshmallow|mrsm|creme|cream|ivory|perola|pearl|board|mork/i,
-    "bege": /bege|beige|workwear|storm|sea salt|birch|pebble|linen|dftw|canhamo|goldbeam|amêndoa|amendoa|hay/i,
+    "bege": /bege|beige|workwear|storm|sea|salt|birch|pebble|linen|dftw|canhamo|goldbeam|amêndoa|amendoa|hay|phantom/i,
     "multicolorido": /multicolorido|multicolor|colorido|multi|colorblock|patchwork|mesclado|mesc|castanho/i,
     "amarelo": /amarelo|yellow|hongo bros|capri|goldenglow|yellowray|narcissus|angora|byo|bcm|gb2/i,
     "quadriculado": /quadriculado|quadriculada|chckrb|checkerbo|chckbrd|checkerboard|check/i,
     "rosa": /rosa|pink|aster|wshp|rose|rosê|blush|chicle|chiclete|strawberry latte|berry/i,
-    "laranja": /laranja|orange|mesa|storm|scuba|pumpkin|vm tel|harvest|rust|borang|xccn/i,
+    "laranja": /laranja|orange|mesa|storm|scuba|pumpkin|vm tel|harvest|rust|borang|xccn|picante/i,
     "vermelho": /vermelho|red|actmar|glored|boltred|verm\.esc|capri|xkwr|wtk|xskr/i,
     "khaki": /khaki|workwear|caqui|narcissus|canhamo|deserto|whisky|colmeia/i,
-    "salmao": /salmao|salmão|salmon|prairie|haze coral|mineral red/i,
+    "salmao": /salmao|salmão|salmon|prairie|haze coral|mineral red|summit/i,
     "vinho": /vinho|wine|bordo|malbec|tinto|mulberry|cherry/i,
     "refletivo": /refletivo|reflective|reflect|reflex/i,
     "lilas": /lilas|lilac|lilás|board|lavander|aster/i,
     "camuflado": /camuflado|camuflada|camo|camu|bcm/i,
-    "dourado": /dourado|gold|golden|goldenglow|gb2/i,
-    "animal print": /animal print|animal pack|mesa/i,
+    "dourado": /dourado|gold|golden|goldenglow|gb2|wheat/i,
+    "animal print": /animal print|animal pack|mesa|hemp/i,
     "glow in the dark": /glow in the dark|gitd/i,
     "areia": /areia|sand|dune|deserto|whisky/i,
     "prata": /prata|silver|board|mork|birch/i,
-    "roxo": /roxo|purple|astral glow|aster/i,
+    "roxo": /roxo|purple|astral glow|aster|photon/i,
     "mostarda": / mostarda|mustard|dijon/i,
     "furta-cor": /furtacor|furta cor/i,
     "gum": /gum|gum4|rubber|mesa|kkg|gun/i,
     "pantone": /pantone|panton/i,
     "ocre": /ocre|ochre|fawn/i,
-    "ciano": /ciano|cyan/i,
     "uv": /uv/i,
 };
 
@@ -49,14 +48,6 @@ const sneakerController = {
 
             let query = {};
             let sort = {};
-
-            if (req.query.search) {
-                const regex = new RegExp('\\b' + req.query.search + '\\b', 'gi');
-                query.$or = [
-                    { sneakerTitle: regex },
-                    { productReference: regex }
-                ];
-            }
 
             if (req.query.color) {
                 const colors = typeof req.query.color === 'string' ? [req.query.color] : req.query.color;
@@ -263,12 +254,7 @@ const sneakerController = {
                 const colorQueries = colors.map(color => {
                     const regex = new RegExp('\\b' + coresRegex[color].source + '\\b', 'gi');;
                     if (regex) {
-                        return {
-                            $or: [
-                                { "cor": { $regex: regex } },
-                                { "sneakerTitle": { $regex: regex } }
-                            ]
-                        };
+                        return { "colors": { $regex: regex } };
                     } else {
                         return null;
                     }
@@ -362,12 +348,7 @@ const sneakerController = {
                 const colorQueries = colors.map(color => {
                     const regex = new RegExp('\\b' + coresRegex[color].source + '\\b', 'gi');;
                     if (regex) {
-                        return {
-                            $or: [
-                                { "cor": { $regex: regex } },
-                                { "sneakerTitle": { $regex: regex } }
-                            ]
-                        };
+                        return { "colors": { $regex: regex } };
                     } else {
                         return null;
                     }
@@ -529,6 +510,122 @@ const sneakerController = {
 
             res.json({
                 sneakers,
+                currentPage: page,
+                totalPages: Math.ceil(totalCount / limit),
+                hasNextPage: hasMore,
+                totalCount
+            });
+        } catch (error) {
+            console.log(error);
+            res.status(500).json({ msg: "Internal server error" });
+        }
+    },
+
+    getSearch: async (req, res) => {
+        try {
+            const search = req.params.search;
+
+            const page = parseInt(req.query.page) || 1;
+            const limit = parseInt(req.query.limit) || 10;
+            const startIndex = (page - 1) * limit;
+            const endIndex = page * limit;
+
+            const regex = new RegExp('\\b' + search + '\\b', 'gi');
+            const nameQuery = {
+                $or: [
+                    { sneakerTitle: regex },
+                    { productReference: regex }
+                ]
+            };
+
+            let query = nameQuery;
+            let sort = {};
+
+            if (req.query.color) {
+                const colors = typeof req.query.color === 'string' ? [req.query.color] : req.query.color;
+                const colorQueries = colors.map(color => {
+                    const regex = new RegExp('\\b' + coresRegex[color].source + '\\b', 'gi');
+                    return { colors: { $regex: regex } };
+                });
+
+                if (colorQueries.length > 0) {
+                    query = {
+                        $and: [
+                            nameQuery,
+                            { $or: colorQueries }
+                        ]
+                    };
+                }
+            }
+
+            if (req.query.size) {
+                const sizes = typeof req.query.size === 'string' ? [req.query.size] : req.query.size;
+                query.availableSizes = { $in: sizes };
+            }
+
+            if (req.query.store) {
+                const stores = typeof req.query.store === 'string' ? [req.query.store] : req.query.store;
+                query.store = { $in: stores };
+            }
+
+            if (req.query.brand) {
+                const brands = typeof req.query.brand === 'string' ? [req.query.brand] : req.query.brand;
+                query.brands = { $in: brands };
+            }
+
+            if (req.query.category) {
+                const categories = typeof req.query.category === 'string' ? [req.query.category] : req.query.category;
+                query.categories = { $in: categories };
+            }
+
+            if (req.query.minPrice || req.query.maxPrice) {
+                const minPrice = parseFloat(req.query.minPrice) || 0;
+                const maxPrice = parseFloat(req.query.maxPrice) || Infinity;
+
+                query.currentPrice = {
+                    $gte: minPrice,
+                    $lte: maxPrice
+                };
+            }
+
+            if (req.query.orderBy) {
+                const orderBy = req.query.orderBy;
+                if (orderBy === "price-asc") {
+                    sort = { currentPrice: 1 };
+                }
+
+                if (orderBy === "price-desc") {
+                    sort = { currentPrice: -1 };
+                }
+
+                if (orderBy === "date-asc") {
+                    sort = { createdAt: 1 };
+                }
+
+                if (orderBy === "date-desc") {
+                    sort = { createdAt: -1 };
+                }
+            } else {
+                sort = { createdAt: -1 };
+            }
+
+            const sneakers = await SneakerModel.find(query).sort(sort).limit(limit).skip(startIndex);
+
+            const uniqueSneakers = [];
+            const seenIds = new Set();
+
+            sneakers.forEach(sneaker => {
+                if (!seenIds.has(sneaker._id)) {
+                    uniqueSneakers.push(sneaker);
+                    seenIds.add(sneaker._id);
+                }
+            });
+
+            const totalCount = await SneakerModel.countDocuments(query);
+            const hasMore = endIndex < totalCount;
+
+            res.json({
+                sneakers: uniqueSneakers,
                 currentPage: page,
                 totalPages: Math.ceil(totalCount / limit),
                 hasNextPage: hasMore,
